--- a/demo-app/package.json
+++ b/demo-app/package.json
@@ -7,22 +7,22 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@angular/common": "2.0.2",
-    "@angular/compiler": "2.0.2",
-    "@angular/core": "2.0.2",
-    "@angular/forms": "2.0.2",
-    "@angular/platform-browser": "2.0.2",
-    "@angular/platform-browser-dynamic": "2.0.2",
+    "@angular/common": "2.1.2",
+    "@angular/compiler": "2.1.2",
+    "@angular/core": "2.1.2",
+    "@angular/forms": "2.1.2",
+    "@angular/platform-browser": "2.1.2",
+    "@angular/platform-browser-dynamic": "2.1.2",
     "core-js": "2.4.1",
     "reflect-metadata": "0.1.8",
-    "rxjs": "5.0.0-beta.12",
-    "systemjs": "0.19.39",
-    "zone.js": "0.6.25"
+    "rxjs": "5.0.0-rc.1",
+    "systemjs": "0.19.40",
+    "zone.js": "0.6.26"
   },
   "devDependencies": {
-    "concurrently": "3.0.0",
+    "concurrently": "3.1.0",
     "lite-server": "2.2.2",
-    "typescript": "2.0.0",
-    "typings":"1.4.0"
+    "typescript": "2.0.6",
+    "typings":"1.5.0"
   }
 }
