--- a/package.json
+++ b/package.json
@@ -25,13 +25,13 @@
   "author": "Dimitar Kostov",
   "license": "MIT",
   "devDependencies": {
-    "@angular/common": "2.1.0-beta.0",
-    "@angular/compiler": "2.1.0-beta.0",
-    "@angular/core": "2.1.0-beta.0",
-    "@angular/forms": "2.1.0-beta.0",
-    "@angular/platform-browser": "2.1.0-beta.0",
-    "@angular/platform-browser-dynamic": "2.1.0-beta.0",
-    "awesome-typescript-loader": "2.2.1",
+    "@angular/common": "2.1.2",
+    "@angular/compiler": "2.1.2",
+    "@angular/core": "2.1.2",
+    "@angular/forms": "2.1.2",
+    "@angular/platform-browser": "2.1.2",
+    "@angular/platform-browser-dynamic": "2.1.2",
+    "awesome-typescript-loader": "2.2.4",
     "core-js": "2.4.1",
     "jasmine-core": "2.5.2",
     "karma": "1.3.0",
@@ -40,13 +40,13 @@
     "karma-phantomjs-launcher": "1.0.2",
     "karma-sourcemap-loader": "0.3.7",
     "karma-webpack": "1.8.0",
-    "phantomjs-prebuilt": "2.1.7",
+    "phantomjs-prebuilt": "2.1.13",
     "reflect-metadata": "0.1.8",
-    "rimraf": "2.5.2",
-    "rxjs": "5.0.0-beta.12",
+    "rimraf": "2.5.4",
+    "rxjs": "5.0.0-rc.1",
     "tslint": "3.15.1",
-    "typescript": "2.0.0",
-    "typings": "1.0.4",
+    "typescript": "2.0.6",
+    "typings": "1.5.0",
     "webpack": "2.1.0-beta.22",
     "webpack-dev-server": "2.1.0-beta.2",
     "zone.js": "0.6.26"
